nuevo main--otros cambios

--- a/integradora/index.html
+++ b/integradora/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/login.css">
 
 </head>
-<body>
+<body id="log">
     <form id="login">
         <h2 class="fuente">Iniciar sesión</h2>
         <input class="sesion" type="text" placeholder="Usuario">
