--- a/integradora/resourses/admin_gph.html
+++ b/integradora/resourses/admin_gph.html
@@ -1,86 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graficas</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="../styles/lateral.css">
-    <link rel="stylesheet" href="../styles/graficas.css">
-</head>
-<body style="border-top: 10px solid #8B2437;">
-    <aside>
-        <!--<a href="" id="logotipo"><span class="tooltip">Inicio</span> logo </a> -->
-        <nav>
-        <ul>
-            <li><a href="main.html" class="lateral">
-            <span class="material-symbols-outlined">
-                checklist
-                </span>
-            <span class="tooltip">tabla ordenes</span>
-            </a></li>
-            <li><a href="crearOrden.html" class="lateral">
-                <span class="material-symbols-outlined">
-                    edit_square
-                </span>
-                <span class="tooltip">crear Orden</span>
-                </a></li>
-            <li><a href="admin_gph.html" class="lateral selected">
-                <span class="material-symbols-outlined">query_stats</span>
-                <span class="tooltip">estadísticas</span>
-                </a></li>
-            <li><a href="productos.html" class="lateral">
-                <span class="material-symbols-outlined">inventory</span>
-                <span class="tooltip">Productos</span>
-            </a></li>
-            <li><a href="empleados.html" class="lateral">
-                <span class="material-symbols-outlined">person</span>
-                <span class="tooltip">Empleados</span>
-            </a></li>
-            <li><a href="clientes.html" class="lateral">
-                <span class="material-symbols-outlined">groups</span>
-                <span class="tooltip">Clientes</span>
-            </a></li>
-            <li><a href="zonas.html" class="lateral">
-                <span class="material-symbols-outlined">map</span>
-                <span class="tooltip">Zonas</span>
-            </a></li>
-        </ul>
-        </nav>
-        <button id="user">
-        <span class="material-symbols-outlined">
-            account_circle
-        </span>
-        <span class="tooltip">usuario</span>
-        </button>
-    </aside>
-    
-    <main>
-        <h2>Gráficas</h2>
-
-            <div class="grafica">
-                <canvas id="clientes"></canvas>
-            </div>
-            <div class="grafica">
-                <canvas id="ventas"></canvas>
-            </div>
-            <div class="grafica">
-                <canvas id="empleados"></canvas>
-            </div>
-            <div class="grafica">
-                <canvas id="masVendidos" ></canvas>
-            </div>
-
-
-    </main>
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="../js/graficas.js"></script>
-</body>
-</html>
+<!-- elminar -->
