--- a/integradora/resourses/main.html
+++ b/integradora/resourses/main.html
@@ -3,173 +3,171 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <title>Inicio</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/lateral.css">
-    <link rel="stylesheet" href="../styles/tablas.css">
-    <link rel="stylesheet" href="../styles/main.css">
-    <title>Lista de ordenes</title>
 </head>
 <body style="border-top: 10px solid #8B2437;">
-  <aside>
-    <!--<a href="" id="logotipo"><span class="tooltip">Inicio</span> logo </a> -->
-    <nav>
-    <ul>
-        <li><a href="main.html" class="lateral selected">
-        <span class="material-symbols-outlined">
-            checklist
-            </span>
-        <span class="tooltip">tabla ordenes</span>
-        </a></li>
-        <li><a href="crearOrden.html" class="lateral">
+    <aside>
+        <!--<a href="" id="logotipo"><span class="tooltip">Inicio</span> logo </a> -->
+        <nav>
+        <ul>
+            <li><a href="main.html" class="lateral selected">
+                <span class="material-symbols-outlined">
+                    home
+                    </span>
+                <span class="tooltip">Inicio</span>
+                </a></li>
+            <li><a href="orden.html" class="lateral">
             <span class="material-symbols-outlined">
-                edit_square
-            </span>
-            <span class="tooltip">crear Orden</span>
+                checklist
+                </span>
+            <span class="tooltip">tabla ordenes</span>
             </a></li>
-        <li><a href="admin_gph.html" class="lateral">
-            <span class="material-symbols-outlined">query_stats</span>
-            <span class="tooltip">estadísticas</span>
+            <li><a href="crearOrden.html" class="lateral">
+                <span class="material-symbols-outlined">
+                    edit_square
+                </span>
+                <span class="tooltip">crear Orden</span>
+                </a></li>
+            <li><a href="productos.html" class="lateral admin">
+                <span class="material-symbols-outlined">inventory</span>
+                <span class="tooltip">Productos</span>
             </a></li>
-        <li><a href="productos.html" class="lateral">
-            <span class="material-symbols-outlined">inventory</span>
-            <span class="tooltip">Productos</span>
-        </a></li>
-        <li><a href="empleados.html" class="lateral">
-            <span class="material-symbols-outlined">person</span>
-            <span class="tooltip">Empleados</span>
-        </a></li>
-        <li><a href="clientes.html" class="lateral">
-            <span class="material-symbols-outlined">groups</span>
-            <span class="tooltip">Clientes</span>
-        </a></li>
-        <li><a href="zonas.html" class="lateral">
-            <span class="material-symbols-outlined">map</span>
-            <span class="tooltip">Zonas</span>
-        </a></li>
-    </ul>
-    </nav>
-    <button id="user">
-    <span class="material-symbols-outlined">
-        account_circle
-    </span>
-    <span class="tooltip">usuario</span>
-    </button>
-</aside>
-
-  <main>
-      <form action="" id="busquedas">
-          <h2>Ordenes</h2>
-          <a href="crearOrden.html" class="bot" type="button"><span class="material-symbols-outlined">add_circle</span> Añadir</a>
-          <div id="barra_busqueda">
-              <select class="js-example-basic-single" name="state">
-                  <option value="" selected disabled>categoría</option>
-                  <option value="AL">Alabama</option>
-                  <option value="WY">Wyoming</option>
-              </select>
-              <input id="Search_principal" type="search" placeholder="Buscar">
-              <button id="Bot_busqueda" class="botS"><span class="material-symbols-outlined">search</span></button>
-          </div>
-      </form>
-
-      <table>
-          <thead>
-              <tr>
-                  <th>Encargado</th>
-                  <th>Cliente</th>
-                  <th>Dirección</th>
-                  <th>Fecha</th>
-                  <th>Hora</th>
-                  <th>Estado</th>
-                  <th>Total</th>
-                  <th>Pago</th>
-                  <th>Información</th>
-                  <th>Acciones</th>
-              </tr>
-          </thead>
-          <tbody id="ordenes-body">
-              <!-- Aquí se insertarán las filas dinámicamente -->
-          </tbody>
-      </table>
-
-      <div id="pagination-controls-ordenes" class="pagination-container"></div>
-
-  </main>
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-  <script>
-      $(document).ready(function() {
-          $('.js-example-basic-single').select2();
-          fetchOrdenes(); // Cargar las órdenes al iniciar
-      });
-
-      const NpaginaOrdenes = 20; // Número de elementos por página
-      let NumpagOrden = 1; // Página inicial
-      let ordenesData = []; // Arreglo para almacenar los datos de órdenes
-
-      function fetchOrdenes() {
-          fetch('https://latosca.up.railway.app/ordenes')
-              .then(response => response.json())
-              .then(ordenes => {
-                  ordenesData = ordenes; // Guardamos los datos en una variable global
-                  renderOrdenesTable();
-                  renderOrdenesPaginationControls();
-              })
-              .catch(error => console.error('Error al cargar las órdenes:', error));
-      }
-
-      function renderOrdenesTable() {
-          const start = (NumpagOrden - 1) * NpaginaOrdenes;
-          const end = start + NpaginaOrdenes;
-          const ordenesToShow = ordenesData.slice(start, end); // Paginación de registros
-
-          let ordenesHTML = '';
-          ordenesToShow.forEach((orden) => {
-              ordenesHTML += `
-                  <tr>
-                      <td>${orden.ID_Empleados || 'N/A'}</td> <!-- Suponiendo que "ID_Empleados" es el encargado -->
-                      <td>${orden.ID_cliente || 'N/A'}</td> <!-- Suponiendo que "ID_cliente" es el cliente -->
-                      <td>${orden.ID_detalle || 'N/A'}</td> <!-- Suponiendo que "ID_detalle" representa la dirección -->
-                      <td>${orden.Fecha ? orden.Fecha.split('T')[0] : 'N/A'}</td> <!-- Solo fecha -->
-                      <td>${orden.Hora || 'N/A'}</td>
-                      <td class="${orden.Estatus === 'activo' ? 'positive' : 'negative'}">${orden.Estatus}</td>
-                      <td>${orden.Precio_total || 'N/A'}</td>
-                      <td>${orden.tipo_pago || 'N/A'}</td>
-                      <td><a href="detalles.html" class="ver">detalle</a></td>
-                      <td id="acciones">
-                          <button class="completar"><span class="material-symbols-outlined">task_alt</span></button>
-                          <button class="proceso"><span class="material-symbols-outlined">acute</span></button>
-                          <button class="cancelado"><span class="material-symbols-outlined">block</span></button>
-                      </td>
-                  </tr>
-              `;
-          });
-
-          document.getElementById("ordenes-body").innerHTML = ordenesHTML;
-      }
-
-      function renderOrdenesPaginationControls() {
-          const totalPages = Math.ceil(ordenesData.length / NpaginaOrdenes);
-          let paginationHTML = '';
-
-          for (let i = 1; i <= totalPages; i++) {
-              paginationHTML += `<button onclick="goToOrdenesPage(${i})" class="pagination-button ${i === NumpagOrden ? 'active' : ''}">${i}</button>`;
-          }
-
-          document.getElementById("pagination-controls-ordenes").innerHTML = paginationHTML;
-      }
-
-      function goToOrdenesPage(page) {
-          NumpagOrden = page;
-          renderOrdenesTable();
-          renderOrdenesPaginationControls();
-      }
-
-      // Llamar a la función para cargar las órdenes y configurar la paginación
-      fetchOrdenes();
-  </script>
-    <script src="../js/script.js"></script>
-
+            <li><a href="empleados.html" class="lateral admin">
+                <span class="material-symbols-outlined">person</span>
+                <span class="tooltip">Empleados</span>
+            </a></li>
+            <li><a href="clientes.html" class="lateral admin">
+                <span class="material-symbols-outlined">groups</span>
+                <span class="tooltip">Clientes</span>
+            </a></li>
+            <li><a href="zonas.html" class="lateral admin">
+                <span class="material-symbols-outlined">map</span>
+                <span class="tooltip">Zonas</span>
+            </a></li>
+        </ul>
+        </nav>
+        <div class="profile-container">
+            <span class="material-symbols-outlined profile-icon">account_circle</span>
+            <div class="dropdown-menu">
+                <button class="buser" onclick="cerrarSesion()">Cerrar sesión</button>
+                <a href="recuperacion.html"><button class="buser">Cambiar contraseña</button></a>
+            </div>
+        </div>
+    </aside>
+    <main id="main">
+        <section id="nombre"><h1>Bienvenido a la Tosca</h1>
+        <h2>Angel Perez</h2></section>
+        <section id="Orden" class="user">
+            <table id="tablaUs">
+                <thead>
+                    <td>Cliente</td>
+                    <td>zona</td>
+                    <td>fecha</td>
+                    <td>acciones</td>
+                </thead>
+                <tbody id="userOrden">
+                    <tr class="nada">
+                        <td>Carlos Alameda</td>
+                        <td>zona 1</td>
+                        <td>21/12/24 10:30</td>
+                        <td>
+                            <button>Completado</button>
+                            <button>En progreso</button>
+                        </td>
+                    </tr>
+                    <tr class="progreso">
+                        <td>Carlos Alameda</td>
+                        <td>zona 1</td>
+                        <td>21/12/24 10:30</td>
+                        <td>
+                            <button>Completado</button>
+                            <button>En progreso</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <a href="orden.html" id="ver-mas">ver mas</a>
+        </section>
+        <section id="MasU" class="user">
+            <div class="item">
+                <span class="material-icons icon">pending</span>
+                <div>
+                    <strong>Ordenes pendientes</strong>
+                    <p>10 en proceso</p>
+                </div>
+            </div>
+            <div class="item">
+                <span class="material-icons icon">check_circle</span>
+                <div>
+                    <strong>Ordenes completadas</strong>
+                    <p>50 completadas</p>
+                </div>
+            </div>
+            <div class="item">
+                <span class="material-icons icon">bar_chart</span>
+                <div>
+                    <strong>Posición</strong>
+                    <p>Puesto 9</p>
+                </div>
+            </div>
+        </section>
+        <section id="stadAd" class="admin">
+            <div class="card">
+                <div class="icon-container">
+                    <span class="material-icons icon">check_circle</span>
+                </div>
+                <div class="content">
+                    <p>Órdenes Completadas</p>
+                    <h3>1,200</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon-container">
+                    <span class="material-icons icon">cancel</span>
+                </div>
+                <div class="content">
+                    <p>Órdenes Canceladas</p>
+                    <h3>300</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon-container">
+                    <span class="material-icons icon">add_circle</span>
+                </div>
+                <div class="content">
+                    <p>Crear Nueva Orden</p>
+                    <a id="nuevaO" href="crearOrden.html">Nueva orden</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon-container">
+                    <span class="material-icons icon">add_circle</span>
+                </div>
+                <div class="content">
+                    <p>Crear Nueva Orden</p>
+                    <a id="nuevaO" href="#">Nueva orden</a>
+                </div>
+            </div>
+        </section>
+        <section class="grafica admin">
+            <canvas id="ventas"></canvas>
+        </section>
+        <section class="grafica admin">
+            <canvas id="clientes"></canvas>
+        </section>
+        <section class="grafica ext admin">
+            <canvas id="empleados"></canvas>
+        </section>
+        <section class="grafica ext admin">
+            <canvas id="masVendidos"></canvas>
+        </section>
+    </main>
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="../js/graficas.js"></script>
 </body>
 </html>
