--- a/integradora/resourses/main.html
+++ b/integradora/resourses/main.html
@@ -136,11 +136,11 @@
             </div>
             <div class="card">
                 <div class="icon-container">
-                    <span class="material-icons icon">add_circle</span>
+                    <span class="material-icons icon">pending</span>
                 </div>
                 <div class="content">
-                    <p>Crear Nueva Orden</p>
-                    <a id="nuevaO" href="crearOrden.html">Nueva orden</a>
+                    <p>Órdenes pendientes</p>
+                    <h3>3</h3>
                 </div>
             </div>
             <div class="card">
