--- a/integradora/resourses/recuperacion.html
+++ b/integradora/resourses/recuperacion.html
@@ -16,8 +16,9 @@
 <body>
     <div id="login">
         <h2 class="fuente">Colocar los datos</h2>
-        <input class="sesion" id="userRec" type="text" placeholder="Usuario">
-        <button onclick="recuperacion()" class="boton">Enviar correo</button>
+        <input class="sesion" id="userRec" type="text" placeholder="Contraseña antigua">
+        <input class="sesion" id="userRec" type="text" placeholder="nueva Contraseña">
+
     </div>
     <script src="../js/script.js"></script>
 </body>
