--- a/integradora/resourses/zonas.html
+++ b/integradora/resourses/zonas.html
@@ -120,7 +120,7 @@
                                 <button class="B_editar" onclick="updateZona(${emp.ID_zona})">
                                     <span class="material-symbols-outlined">edit</span>
                                 </button>
-                                <button class="B_eliminar">
+                                <button class="B_eliminar" onclick="eliminarZona(${emp.ID_zona})">
                                     <span class="material-symbols-outlined">delete</span>
                                 </button>
                             </td>
