--- a/integradora/resourses/orden.html
+++ b/integradora/resourses/orden.html
@@ -63,7 +63,7 @@
   <main>
       <form action="" id="busquedas">
           <h2>Ordenes</h2>
-          <a href="crearOrden.html" class="bot" type="button"><span class="material-symbols-outlined">add_circle</span> Añadir</a>
+          <a href="crearOrden.html" style="text-decoration: none;" class="bot" type="button"><span class="material-symbols-outlined">add_circle</span> Añadir</a>
           <div id="barra_busqueda">
               <select class="js-example-basic-single" name="state">
                   <option value="" selected disabled>categoría</option>
