--- a/integradora/resourses/main.html
+++ b/integradora/resourses/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
@@ -149,7 +150,7 @@
                 </div>
                 <div class="content">
                     <p>Crear Nueva Orden</p>
-                    <a id="nuevaO" href="#">Nueva orden</a>
+                    <a id="nuevaO" href="crearOrden.html">Nueva orden</a>
                 </div>
             </div>
         </section>
