--- a/integradora/resourses/main.html
+++ b/integradora/resourses/main.html
@@ -168,7 +168,9 @@
         </section>
     </main>
     
+    <script src="../js/session.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="../js/graficas.js"></script>
+    
 </body>
 </html>
