regreso en el tiempo

--- a/integradora/index.html
+++ b/integradora/index.html
@@ -11,11 +11,10 @@
 <body id="log">
     <form id="login">
         <h2 class="fuente">Iniciar sesión</h2>
-        <input id="correo" class="sesion" type="text" placeholder="Usuario">
-        <input id="password" class="sesion" type="password" placeholder="Contraseña">
-        <button type="button" onclick="iniciarSesion()" class="boton">Iniciar sesión</button>
+        <input class="sesion" type="text" placeholder="Usuario">
+        <input class="sesion" type="password" placeholder="Contraseña">
+        <a href="resourses/main.html" class="boton">Entrar</a>
 <!--         <a href="resourses/recuperacion.html">haz olvidado tu contraseña?</a> -->
     </form>
-    <script src="js/session.js"></script>
 </body>
 </html>
