--- a/integradora/resourses/clientes.html
+++ b/integradora/resourses/clientes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clientes</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="../styles/lateral.css">
@@ -189,11 +190,11 @@
         <form action="" id="clienteForm" class="modificacion">
             <h2>Formulario Clientes</h2>
             <button id="salirP" type="button" onclick="colapsePopup('addPopup')">X</button>
-            <input type="text" class="tercio" name="NombreC" placeholder="Nombre(s)" required><!--Pedir llenar el campo-->
-            <input type="text" class="tercio" name="PaternoC" placeholder="Apellido Paterno" required>
-            <input type="text" class="tercio" name="MaternoC" placeholder="Apellido Materno" required>
-            <input type="number" class="medio" name="telefonoC" placeholder="teléfono" required>
-            <input type="email" class="medio" name="correoC" placeholder="correo" required>
+            <input type="text" class="tercio" name="NombreC" placeholder="Nombre(s)">
+            <input type="text" class="tercio" name="PaternoC" placeholder="Apellido Paterno">
+            <input type="text" class="tercio" name="MaternoC" placeholder="Apellido Materno">
+            <input type="text" class="medio" name="telefonoC" placeholder="teléfono" required>
+            <input type="text" class="medio" name="correoC" placeholder="correo">
             <div id="contDicc"></div>
             <button type="button" class="full" id="B_direcciones" onclick="agregarDireccion()">Añadir dirección</button>
             
