Regreso en el tiempo 2.0

--- a/integradora/resourses/main.html
+++ b/integradora/resourses/main.html
@@ -9,16 +9,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/lateral.css">
-    <link rel="stylesheet" href="../styles/loader.css">
-    <script src="../js/loader.js"></script>
 </head>
 <body style="border-top: 10px solid #8B2437;">
-    <div class="loader-container" id="loaderContainer">
-        <div class="loader">
-            <div class="moving-line"></div>
-            <img src="../img/logo-tosca-grad.png" alt="Logo">
-        </div>
-    </div>
     <aside>
         <!--<a href="" id="logotipo"><span class="tooltip">Inicio</span> logo </a> -->
         <nav>
@@ -63,7 +55,7 @@
             <span class="material-symbols-outlined profile-icon">account_circle</span>
             <div class="dropdown-menu">
                 <button class="buser" onclick="cerrarSesion()">Cerrar sesión</button>
-                <a href="cambio.html"><button class="buser">Cambiar contraseña</button></a>
+                <a href="recuperacion.html"><button class="buser">Cambiar contraseña</button></a>
             </div>
         </div>
     </aside>
