--- a/integradora/resourses/cambio.html
+++ b/integradora/resourses/cambio.html
@@ -6,16 +6,9 @@
     <title>Recuperacion de Contraseña</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="../styles/login.css">
-    <link rel="stylesheet" href="../styles/loader.css">
-    <script src="../js/loader.js"></script>
+
 </head>
-<body style="border-top: 10px solid #8B2437;">
-    <div class="loader-container" id="loaderContainer">
-        <div class="loader">
-            <div class="moving-line"></div>
-            <img src="../img/logo-tosca-grad.png" alt="Logo">
-        </div>
-    </div>
+<body>
     <form id="login">
         <h2 class="fuente">actualiza Contraseña</h2>
         <input class="sesion" type="text" placeholder="Contraseña antigua">
@@ -24,7 +17,6 @@
 
         <button onclick="recuperacion()" class="boton">Enviar correo</button>
     </form>
-    <script src="../js/session.js"></script>
     <script src="../js/script.js"></script>
 </body>
 </html>
