--- a/integradora/resourses/productos.html
+++ b/integradora/resourses/productos.html
@@ -28,12 +28,7 @@
                 </span>
             <span class="tooltip">tabla ordenes</span>
             </a></li>
-            <li><a href="crearOrden.html" class="lateral">
-                <span class="material-symbols-outlined">
-                    edit_square
-                </span>
-                <span class="tooltip">crear Orden</span>
-                </a></li>
+             
             <li><a href="productos.html" class="lateral admin selected">
                 <span class="material-symbols-outlined">inventory</span>
                 <span class="tooltip">Productos</span>
@@ -228,6 +223,7 @@
     </div>
     <div id="upPopup" class="Popup"></div>
     
+    <script src="../js/session.js"></script>
     <script src="../js/formulario.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
