--- a/integradora/resourses/orden.html
+++ b/integradora/resourses/orden.html
@@ -1,179 +1,235 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="../styles/lateral.css">
-    <link rel="stylesheet" href="../styles/tablas.css">
-    <link rel="stylesheet" href="../styles/orden.css">
-    <title>Lista de ordenes</title>
-</head>
-<body style="border-top: 10px solid #8B2437;">
-    <aside>
-        <!--<a href="" id="logotipo"><span class="tooltip">Inicio</span> logo </a> -->
-        <nav>
-        <ul>
-            <li><a href="main.html" class="lateral">
-                <span class="material-symbols-outlined">
-                    home
-                    </span>
-                <span class="tooltip">Inicio</span>
-                </a></li>
-            <li><a href="orden.html" class="lateral selected">
-            <span class="material-symbols-outlined">
-                checklist
-                </span>
-            <span class="tooltip">tabla ordenes</span>
-            </a></li>
-            <li><a href="crearOrden.html" class="lateral">
-                <span class="material-symbols-outlined">
-                    edit_square
-                </span>
-                <span class="tooltip">crear Orden</span>
-                </a></li>
-            <li><a href="productos.html" class="lateral admin">
-                <span class="material-symbols-outlined">inventory</span>
-                <span class="tooltip">Productos</span>
-            </a></li>
-            <li><a href="empleados.html" class="lateral admin">
-                <span class="material-symbols-outlined">person</span>
-                <span class="tooltip">Empleados</span>
-            </a></li>
-            <li><a href="clientes.html" class="lateral admin">
-                <span class="material-symbols-outlined">groups</span>
-                <span class="tooltip">Clientes</span>
-            </a></li>
-            <li><a href="zonas.html" class="lateral admin">
-                <span class="material-symbols-outlined">map</span>
-                <span class="tooltip">Zonas</span>
-            </a></li>
-        </ul>
-        </nav>
-        <div class="profile-container">
-            <span class="material-symbols-outlined profile-icon">account_circle</span>
-            <div class="dropdown-menu">
-                <button class="buser" onclick="cerrarSesion()">Cerrar sesión</button>
-                <a href="recuperacion.html"><button class="buser">Cambiar contraseña</button></a>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="../styles/lateral.css">
+        <link rel="stylesheet" href="../styles/tablas.css">
+        <link rel="stylesheet" href="../styles/orden.css">
+        <title>ordenes</title><link rel="stylesheet" href="../styles/loader.css">
+        <script src="../js/loader.js"></script>
+    </head>
+    <body style="border-top: 10px solid #8B2437;">
+        <div class="loader-container" id="loaderContainer">
+            <div class="loader">
+                <div class="moving-line"></div>
+                <img src="../img/logo-tosca-grad.png" alt="Logo">
             </div>
         </div>
-    </aside>
+        <aside>
+            <!--<a href="" id="logotipo"><span class="tooltip">Inicio</span> logo </a> -->
+            <nav>
+            <ul>
+                <li><a href="main.html" class="lateral">
+                    <span class="material-symbols-outlined">
+                        home
+                        </span>
+                    <span class="tooltip">Inicio</span>
+                    </a></li>
+                <li><a href="orden.html" class="lateral selected">
+                <span class="material-symbols-outlined">
+                    checklist
+                    </span>
+                <span class="tooltip">tabla ordenes</span>
+                </a></li>
+                    <li><a href="productos.html" class="lateral admin">
+                        <span class="material-symbols-outlined">inventory</span>
+                        <span class="tooltip">Productos</span>
+                    </a></li>
+                    <li><a href="empleados.html" class="lateral admin">
+                        <span class="material-symbols-outlined">person</span>
+                        <span class="tooltip">Empleados</span>
+                    </a></li>
+                    <li><a href="clientes.html" class="lateral admin">
+                        <span class="material-symbols-outlined">groups</span>
+                        <span class="tooltip">Clientes</span>
+                    </a></li>
+                    <li><a href="zonas.html" class="lateral admin">
+                        <span class="material-symbols-outlined">map</span>
+                        <span class="tooltip">Zonas</span>
+                    </a></li>
+                </ul>
+            </nav>
+            <div class="profile-container">
+                <span class="material-symbols-outlined profile-icon">account_circle</span>
+                <div class="dropdown-menu">
+                    <button class="buser" onclick="cerrarSesion()">Cerrar sesión</button>
+                    <a href="cambio.html"><button class="buser">Cambiar contraseña</button></a>
+                </div>
+            </div>
+        </aside>
 
-  <main>
-      <form action="" id="busquedas">
-          <h2>Ordenes</h2>
-          <a href="crearOrden.html" style="text-decoration: none;" class="bot" type="button"><span class="material-symbols-outlined">add_circle</span> Añadir</a>
-          <div id="barra_busqueda">
-              <select class="js-example-basic-single" name="state">
-                  <option value="" selected disabled>categoría</option>
-                  <option value="AL">Alabama</option>
-                  <option value="WY">Wyoming</option>
-              </select>
-              <input id="Search_principal" type="search" placeholder="Buscar">
-              <button id="Bot_busqueda" class="botS"><span class="material-symbols-outlined">search</span></button>
-          </div>
-      </form>
+    <main>
+        <form action="" id="busquedas">
+            <h2>Ordenes</h2>
+            <a href="crearOrden.html" style="text-decoration: none;" class="bot" type="button"><span class="material-symbols-outlined">add_circle</span> Añadir</a>
+            <div id="barra_busqueda">
+                <select class="js-example-basic-single" name="state">
+                    <option value="" selected disabled>categoría</option>
+                    <option value="AL">Alabama</option>
+                    <option value="WY">Wyoming</option>
+                </select>
+                <input id="Search_principal" type="search" placeholder="Buscar">
+                <button id="Bot_busqueda" class="botS"><span class="material-symbols-outlined">search</span></button>
+            </div>
+        </form>
 
-      <table>
-          <thead>
-              <tr>
-                  <th>Encargado</th>
-                  <th>Cliente</th>
-                  <th>Dirección</th>
-                  <th>Fecha</th>
-                  <th>Hora</th>
-                  <th>Estado</th>
-                  <th>Total</th>
-                  <th>Pago</th>
-                  <th>Información</th>
-                  <th>Acciones</th>
-              </tr>
-          </thead>
-          <tbody id="ordenes-body">
-              <!-- Aquí se insertarán las filas dinámicamente -->
-          </tbody>
-      </table>
+        <table>
+            <thead>
+                <tr>
+                    <th>Encargado</th>
+                    <th>Cliente</th>
+                    <th>Dirección</th>
+                    <th>Fecha de entrega</th>
+                    <th>Estado</th>
+                    <th>Total</th>
+                    <th>Pago</th>
+                    <th>Información</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody id="ordenes-body">
+                <!-- Aquí se insertarán las filas dinámicamente -->
+            </tbody>
+        </table>
 
-      <div id="pagination-controls-ordenes" class="pagination-container"></div>
+        <div id="pagination-controls-ordenes" class="pagination-container"></div>
 
-  </main>
+    </main>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-  <script>
-      $(document).ready(function() {
-          $('.js-example-basic-single').select2();
-          fetchOrdenes(); // Cargar las órdenes al iniciar
-      });
 
-      const NpaginaOrdenes = 20; // Número de elementos por página
-      let NumpagOrden = 1; // Página inicial
-      let ordenesData = []; // Arreglo para almacenar los datos de órdenes
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            fetch('https://latosca.up.railway.app/api/rol', { credentials: 'include' }) // Incluye cookies
+                .then(response => response.json())
+                .then(data => {
+                    if (data.rol === 'admin') {
+                        ocultarElementosUser(); // Oculta elementos solo para usuarios normales
+                    } else if (data.rol === 'empleado') {
+                        ocultarElementosAdmin(); // Oculta elementos solo para administradores
+                    }
+                })
+                .catch(error => {
+                    console.error('Error al obtener el rol del usuario:', error);
+                    ocultarElementosAdmin(); // Por seguridad, oculta si no se puede determinar el rol
+                    ocultarElementosUser(); // Por seguridad, oculta si no se puede determinar el rol
+                });
+        });
+        
+        function ocultarElementosAdmin() {
+            const elementos = document.querySelectorAll('.admin'); // Selecciona los elementos con la clase "admin"
+            elementos.forEach(elemento => elemento.style.display = 'none'); // Oculta los elementos
+        }
 
-      function fetchOrdenes() {
-          fetch('https://latosca.up.railway.app/ordenes')
-              .then(response => response.json())
-              .then(ordenes => {
-                  ordenesData = ordenes; // Guardamos los datos en una variable global
-                  renderOrdenesTable();
-                  renderOrdenesPaginationControls();
-              })
-              .catch(error => console.error('Error al cargar las órdenes:', error));
-      }
+        function ocultarElementosUser() {
+            const elementos = document.querySelectorAll('.user'); // Selecciona los elementos con la clase "user"
+            elementos.forEach(elemento => elemento.style.display = 'none'); // Oculta los elementos
+        }
 
-      function renderOrdenesTable() {
-          const start = (NumpagOrden - 1) * NpaginaOrdenes;
-          const end = start + NpaginaOrdenes;
-          const ordenesToShow = ordenesData.slice(start, end); // Paginación de registros
+    </script>
+    <script src="../js/session.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.js-example-basic-single').select2();
+            fetchOrdenes(); // Cargar las órdenes al iniciar
+        });
 
-          let ordenesHTML = '';
-          ordenesToShow.forEach((orden) => {
-              ordenesHTML += `
-                  <tr>
-                      <td>${orden.ID_Empleados || 'N/A'}</td> <!-- Suponiendo que "ID_Empleados" es el encargado -->
-                      <td>${orden.ID_cliente || 'N/A'}</td> <!-- Suponiendo que "ID_cliente" es el cliente -->
-                      <td>${orden.ID_detalle || 'N/A'}</td> <!-- Suponiendo que "ID_detalle" representa la dirección -->
-                      <td>${orden.Fecha ? orden.Fecha.split('T')[0] : 'N/A'}</td> <!-- Solo fecha -->
-                      <td>${orden.Hora || 'N/A'}</td>
-                      <td class="${orden.Estatus === 'activo' ? 'positive' : 'negative'}">${orden.Estatus}</td>
-                      <td>${orden.Precio_total || 'N/A'}</td>
-                      <td>${orden.tipo_pago || 'N/A'}</td>
-                      <td><a href="detalles.html" class="ver">detalle</a></td>
-                      <td id="acciones">
-                          <button class="completar"><span class="material-symbols-outlined">task_alt</span></button>
-                          <button class="proceso"><span class="material-symbols-outlined">acute</span></button>
-                          <button class="cancelado"><span class="material-symbols-outlined">block</span></button>
-                      </td>
-                  </tr>
-              `;
-          });
+        const NpaginaOrdenes = 20; // Número de elementos por página
+        let NumpagOrden = 1; // Página inicial
+        let ordenesData = []; // Arreglo para almacenar los datos de órdenes
 
-          document.getElementById("ordenes-body").innerHTML = ordenesHTML;
-      }
+        function fetchOrdenes() {
+            fetch('https://latosca.up.railway.app/ordenes')
+                .then(response => response.json())
+                .then(ordenes => {
+                    ordenesData = ordenes; // Guardamos los datos en una variable global
+                    renderOrdenesTable();
+                    renderOrdenesPaginationControls();
+                })
+                .catch(error => console.error('Error al cargar las órdenes:', error));
+        }
 
-      function renderOrdenesPaginationControls() {
-          const totalPages = Math.ceil(ordenesData.length / NpaginaOrdenes);
-          let paginationHTML = '';
+        function renderOrdenesTable() {
+            const start = (NumpagOrden - 1) * NpaginaOrdenes;
+            const end = start + NpaginaOrdenes;
+            const ordenesToShow = ordenesData.slice(start, end); // Paginación de registros
 
-          for (let i = 1; i <= totalPages; i++) {
-              paginationHTML += `<button onclick="goToOrdenesPage(${i})" class="pagination-button ${i === NumpagOrden ? 'active' : ''}">${i}</button>`;
-          }
+            let ordenesHTML = '';
+            const ordenesFiltradas = ordenesToShow
+            .filter((orden) => orden.Estatus !== 'cancelado') // Filtrar las órdenes canceladas
+            .sort((a, b) => {
+                // Ordenar: proceso primero, luego activo
+                const prioridad = { proceso: 1, activo: 2 };
+                return (prioridad[a.Estatus] || 3) - (prioridad[b.Estatus] || 3);
+            });
 
-          document.getElementById("pagination-controls-ordenes").innerHTML = paginationHTML;
-      }
+        ordenesFiltradas.forEach((orden) => {
+            ordenesHTML += `
+                <tr>
+                    <td>${orden.ID_Empleados}</td> <!-- Suponiendo que "ID_Empleados" es el encargado -->
+                    <td>${orden.ID_cliente}</td> <!-- Suponiendo que "ID_cliente" es el cliente -->
+                    <td>${orden.Direccion}</td> <!-- Suponiendo que "ID_detalle" representa la dirección -->
+                    <td>${formatDate(orden.fechaE)}</td>
+                    <td class="${orden.Estatus === 'activo' ? 'positive' : 'negative'}">${orden.Estatus}</td>
+                    <td>${orden.Precio_total || 'N/A'}</td>
+                    <td>${orden.tipo_pago || 'N/A'}</td>
+                    <td><a href="detalles.html?id=${orden.ID_orden}" class="ver">detalle</a></td>
+                    <td id="acciones">
+                        ${orden.Estatus === 'activo' ? `
+                            <button class="proceso"><span class="material-symbols-outlined">acute</span></button>
+                            <button class="cancelado"><span class="material-symbols-outlined">block</span></button>
+                        ` : orden.Estatus === 'proceso' ? `
+                            <button class="completar"><span class="material-symbols-outlined">task_alt</span></button>
+                        ` : ''}
+                    </td>
+                </tr>
+            `;
+        });
 
-      function goToOrdenesPage(page) {
-          NumpagOrden = page;
-          renderOrdenesTable();
-          renderOrdenesPaginationControls();
-      }
+            document.getElementById("ordenes-body").innerHTML = ordenesHTML;
+        }
+        function formatDate(fechaISO) {
+            const date = new Date(fechaISO);
+            // Formato deseado: "YYYY-MM-DD HH:mm:ss"
+            const options = {
+                year: "numeric",
+                month: "2-digit",
+                day: "2-digit",
+                hour: "2-digit",
+                minute: "2-digit",
+                second: "2-digit",
+                hour12: false,
+            };
+            return new Intl.DateTimeFormat("es-ES", options).format(date).replace(",", "");
+        }
 
-      // Llamar a la función para cargar las órdenes y configurar la paginación
-      fetchOrdenes();
-  </script>
-    <script src="../js/script.js"></script>
+        function renderOrdenesPaginationControls() {
+            const totalPages = Math.ceil(ordenesData.length / NpaginaOrdenes);
+            let paginationHTML = '';
 
-</body>
-</html>
+            for (let i = 1; i <= totalPages; i++) {
+                paginationHTML += `<button onclick="goToOrdenesPage(${i})" class="pagination-button ${i === NumpagOrden ? 'active' : ''}">${i}</button>`;
+            }
+
+            document.getElementById("pagination-controls-ordenes").innerHTML = paginationHTML;
+        }
+
+        function goToOrdenesPage(page) {
+            NumpagOrden = page;
+            renderOrdenesTable();
+            renderOrdenesPaginationControls();
+        }
+
+        // Llamar a la función para cargar las órdenes y configurar la paginación
+        fetchOrdenes();
+    </script>
+        <script src="../js/session.js"></script>
+        <script src="../js/script.js"></script>
+
+    </body>
+    </html>
